fix some header spacing

--- a/docroot/sites/all/themes/govcon/css/govcon.no-query.css
+++ b/docroot/sites/all/themes/govcon/css/govcon.no-query.css
@@ -186,7 +186,7 @@ fieldset {
 /* line 9, ../sass/components/_forms.scss */
 .filters.form-wrapper {
   float: left; }
-  /* line 34, ../sass/abstractions/_mixins.scss */
+  /* line 35, ../sass/abstractions/_mixins.scss */
   .filters.form-wrapper:after {
     content: "";
     display: table;
@@ -383,7 +383,7 @@ ul.tier-two {
 .menu-toggle {
   margin-top: 10px;
   margin-left: 10px;
-  background: url(../images/texture200.png) #e02d3b;
+  background: url(../images/texture200.png) #095380;
   text-align: center;
   height: 40px;
   line-height: 40px;
@@ -425,12 +425,12 @@ ul.tier-two {
   right: 10px; }
   /* line 130, ../sass/components/_navigation.scss */
   .l-region--header ul.menu li.first a {
-    padding: 10px 10px 14px;
-    font-size: .9em;
+    padding: 6px 6px 8px;
+    font-size: .8em;
     background: url(../images/ticket.svg) no-repeat top left;
     background-size: contain;
     position: relative;
-    top: 4px;
+    top: 6px;
     display: inline-block;
     color: #fff;
     -webkit-transform: rotate(-10deg);
@@ -560,7 +560,8 @@ ul.main-menu {
   right: auto; }
   /* line 230, ../sass/components/_navigation.scss */
   .l-region--header ul.menu li.first a {
-    font-size: 1em; }
+    font-size: 1em;
+    padding: 10px 10px 14px; }
 
 /* line 236, ../sass/components/_navigation.scss */
 li.menu-item a {
@@ -576,14 +577,15 @@ li.menu-item a:hover, li.menu-item a.active {
   top: 0;
   left: 0;
   right: 0;
-  z-index: -1;
+  z-index: -4;
   background: #8bb5bb;
-  height: 250px;
+  height: 120px;
   background-image: url(../images/texture200.png);
   overflow: hidden; }
 
 /* line 14, ../sass/components/_shapes.scss */
 .header-bg--cutout {
+  z-index: -2;
   position: absolute;
   top: 80px;
   left: 50%;
@@ -597,23 +599,27 @@ li.menu-item a:hover, li.menu-item a.active {
   background-color: #e6e4dd;
   background-image: url(../images/texture200.png); }
 
-/* line 26, ../sass/components/_shapes.scss */
+/* line 27, ../sass/components/_shapes.scss */
 .header-bg--buildings {
   display: none; }
 
-/* line 32, ../sass/components/_shapes.scss */
+/* line 33, ../sass/components/_shapes.scss */
+.header-bg {
+  height: 250px; }
+
+/* line 34, ../sass/components/_shapes.scss */
 .header-bg--cutout {
   top: 120px; }
 
-/* line 33, ../sass/components/_shapes.scss */
+/* line 35, ../sass/components/_shapes.scss */
 .page-node-1 .header-bg--cutout {
   top: 240px; }
 
-/* line 34, ../sass/components/_shapes.scss */
+/* line 36, ../sass/components/_shapes.scss */
 .page-node-1 .header-bg {
   height: 400px; }
 
-/* line 35, ../sass/components/_shapes.scss */
+/* line 37, ../sass/components/_shapes.scss */
 .page-node-1 .header-bg--buildings {
   display: block;
   background: url(../images/buildings.png) center center no-repeat transparent;
@@ -622,17 +628,18 @@ li.menu-item a:hover, li.menu-item a.active {
   top: 80px;
   left: 0;
   width: 100%;
-  height: 201px; }
+  height: 201px;
+  z-index: -3; }
 
-/* line 47, ../sass/components/_shapes.scss */
+/* line 50, ../sass/components/_shapes.scss */
 .bevel {
   background-color: #8bb5bb;
   padding: 2em;
   position: relative; }
-  /* line 51, ../sass/components/_shapes.scss */
+  /* line 54, ../sass/components/_shapes.scss */
   .bevel * {
     position: relative; }
-  /* line 52, ../sass/components/_shapes.scss */
+  /* line 55, ../sass/components/_shapes.scss */
   .bevel .bg {
     background-color: #8bb5bb;
     position: absolute;
@@ -640,7 +647,7 @@ li.menu-item a:hover, li.menu-item a.active {
     right: 0;
     left: 0;
     bottom: 0; }
-  /* line 60, ../sass/components/_shapes.scss */
+  /* line 63, ../sass/components/_shapes.scss */
   .bevel .bg-overlay {
     content: "";
     background: url(../images/texture200.png) repeat transparent;
@@ -650,30 +657,30 @@ li.menu-item a:hover, li.menu-item a.active {
     right: 0;
     bottom: 0;
     left: 0; }
-  /* line 63, ../sass/components/_shapes.scss */
+  /* line 66, ../sass/components/_shapes.scss */
   .bevel .tl, .bevel .tr, .bevel .bl, .bevel .br {
     width: 0;
     height: 0;
     position: absolute; }
-  /* line 68, ../sass/components/_shapes.scss */
+  /* line 71, ../sass/components/_shapes.scss */
   .bevel .tl {
     top: 0;
     left: 0;
     border-top: 15px solid #e6e4dd;
     border-right: 15px solid transparent; }
-  /* line 74, ../sass/components/_shapes.scss */
+  /* line 77, ../sass/components/_shapes.scss */
   .bevel .tr {
     top: 0;
     right: 0;
     border-top: 15px solid #e6e4dd;
     border-left: 15px solid transparent; }
-  /* line 80, ../sass/components/_shapes.scss */
+  /* line 83, ../sass/components/_shapes.scss */
   .bevel .bl {
     bottom: 0;
     left: 0;
     border-bottom: 15px solid #e6e4dd;
     border-right: 15px solid transparent; }
-  /* line 86, ../sass/components/_shapes.scss */
+  /* line 89, ../sass/components/_shapes.scss */
   .bevel .br {
     bottom: 0;
     right: 0;
@@ -760,7 +767,8 @@ body.admin-menu.adminimal-menu.adminimal-frontend {
   text-indent: -9000px;
   display: block;
   padding: 0;
-  margin: 0; }
+  margin: 0;
+  line-height: 0; }
 
 /* line 52, ../sass/govcon.styles.scss */
 .l-region--footer {
@@ -777,7 +785,8 @@ body.admin-menu.adminimal-menu.adminimal-frontend {
   text-indent: -9000px;
   display: block;
   padding: 0;
-  margin: 0; }
+  margin: 0;
+  line-height: 0; }
 
 /* line 62, ../sass/govcon.styles.scss */
 .user-profile {
