--- a/docroot/sites/all/themes/govcon/sass/abstractions/_mixins.scss
+++ b/docroot/sites/all/themes/govcon/sass/abstractions/_mixins.scss
@@ -4,6 +4,7 @@
     display:block;
     padding: 0;
     margin: 0;
+    line-height: 0;
 }
 @mixin letterpress($opacity: 0.5){
   @include text-shadow(0 1px 0 rgba(255,255,255,$opacity));
