--- a/docroot/sites/all/themes/govcon/sass/components/_shapes.scss
+++ b/docroot/sites/all/themes/govcon/sass/components/_shapes.scss
@@ -5,13 +5,14 @@
   top: 0;
   left: 0;
   right: 0;
-  z-index: -1;
+  z-index: -4;
   background: $pale-blue;
-  height: 250px;
+  height: 120px;
   background-image: $texture;
   overflow: hidden;
 }
 .header-bg--cutout {
+  z-index: -2;
   position: absolute;
   top: 80px;
   left: 50%;
@@ -29,6 +30,7 @@
 
 @include breakpoint($tab, true) {
 
+  .header-bg { height: 250px; }
   .header-bg--cutout { top: 120px; }
   .page-node-1 .header-bg--cutout { top: 240px; }
   .page-node-1 .header-bg { height: 400px; }
@@ -41,6 +43,7 @@
     left: 0;
     width: 100%;
     height: 201px;
+    z-index: -3;
   }
 
 }
